tor-relay/dep-a.yml
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata: 
    name: "tor-relay"
    namespace: "default"
  spec: 
    replicas: 1
    template: 
      metadata: 
        labels:
          app: tor
      spec: 
        containers: 
          - name: "tor-relay"
            image: "quay.io/andysmith/tor-relay:0.2.8.12"
            ports: 
              - containerPort: 9001
                protocol: "TCP"
            imagePullPolicy: "IfNotPresent"
            volumeMounts:
              - name: torrc
                mountPath: /etc/tor/
        restartPolicy: "Always"
        dnsPolicy: "ClusterFirst"
        volumes:
          - name: torrc
            configMap:
              name: torrc-a
