tor-relay/svc.yml
---
  kind: "Service"
  apiVersion: "v1"
  metadata: 
    name: "tor"
  spec: 
    selector: 
      app: "tor"
    type: "NodePort"
    ports: 
      - 
        protocol: "TCP"
        port: 9001
        targetPort: 9001
