tor-relay/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tor
spec:
  backend:
    serviceName: tor
    servicePort: 9001
